[project]
name = "dzdbgport"
version = "0.9"
description = ""
authors = [
    {name = "yuval",email = "yuvalino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit (>=3.0.51,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
