[tool.poetry]
name = "dzdbgport"
version = "0.1.0"
description = ""
authors = ["Yuval <yuvalino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
prompt-toolkit = "^3.0.51"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
