[tool.poetry]
name = "dzdbgport"
version = "0.3.0"
description = "Unofficial DayZ debugging tool for VSCode and development package in Python."
authors = ["Yuval <yuvalino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
prompt-toolkit = "^3.0.51"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Github" = "https://github.com/yuvalino/dzdbgport"